--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,87 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+    display: flex;
+    min-height: 100vh;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.background img {
+    background-size: cover;
+    position: absolute;
+    /*top: 50%;*/
+    left: 50%;
+    right: 0;
+    /*bottom: -50%;*/
+    width: 50%;
+    height: 50%;
+    z-index: -1;
+    opacity: 0.8;
+    background-blend-mode: luminosity;
+    filter: blur(20px);
+}
+
+.header img {
+    width: 25%;
+    height: 25%;
+    object-fit: cover;
+    margin-top: 150px;
+}
+
+.header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+/*.main-content {*/
+/*  position: absolute;*/
+/*    top: 50%;*/
+/*  transform: translate(20%,-50%);*/
+/*}*/
+
+.main-content__text  h1 {
+    /*text-align: left !impo?rtant;*/
+    align-content: center;
+    justify-content: left;
+}
+
+
+.main-content__text__title {
+    font-size: 3.5rem;
+    font-weight: 700;
+    color: #2b3756;
+    margin-bottom: 10px;
+}
+
+.main-content__text__description {
+    font-size: 1.5rem;
+    font-weight: 400;
+    color: #2b3756;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
+.main-content Button{
+    background-color: #a8d100;
+    border: none;
+}
+
+.main-content Button:hover {
+    background-color: #00b3dd;
+    border: none;
+}
+
+.main-content Button:focus {
+    background-color: #00b3dd;
+    border: none;
+}
+
+.logo {
+    margin-top: 40px;
 }
